--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,9 @@ jobs:
       - run:
           name: Install Dependancies
           command: npm install
+      - run:
+          name: Build
+          command: npm run build
 
 workflows:
   herokou_deploy:
