--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           command: npm run build
 
 workflows:
-  herokou_deploy:
+  heroku_deploy:
     jobs:
     - build
     - heroku/deploy-via-git:
