--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - checkout
       - run:
           name: Setup 
-          command: git push heroku main:main
+          command: git push heroku main
 
 workflows:
   heroku_deploy:
