--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,24 +18,24 @@ jobs:
           command: npm run build
 
 
-  deploy:
-    machine: 
-      enabled: true
-    working_directory: ~/rep
-    steps:
-      - checkout
-      - run:
-          name: Setup heroku 
-          command: heroku git:remote -a kavi-reactjs
-      - run:
-          name: Deploy the app
-          command: git push heroku main
+  # deploy:
+  #   machine: 
+  #     enabled: true
+  #   working_directory: ~/rep
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: Setup heroku 
+  #         command: heroku git:remote -a kavi-reactjs
+  #     - run:
+  #         name: Deploy the app
+  #         command: git push heroku main
 
 workflows:
   heroku_deploy:
     jobs:
     - build
-    - deploy:
+    - heroku/deploy-via-git:
         requires:
           - build
         filters:
